[tool.poetry]
name = "hubert"
version = "0.1.0"
description = "mxs' ramblings with IA"
authors = ["s. rannou <mxs@sbrk.org>"]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.30.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
